ISIS-3002: demo app dependencies

--- a/examples/demo/pom.xml
+++ b/examples/demo/pom.xml
@@ -178,6 +178,14 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<profiles>
 		<profile>
 			<id>module-all</id>
