--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <maven.deploy.skip>true</maven.deploy.skip> <!-- don't deploy the aggregator -->
 
 		<maven-timeline.version>1.6</maven-timeline.version>
-    </properties>
+	</properties>
 
 	<scm>
 		<connection>scm:git:https://github.com/apache/isis.git</connection>
@@ -346,6 +346,295 @@
 			<modules>
 				<module>tooling</module>
 			</modules>
+		</profile>
+
+		<profile>
+			<id>isis-app-starter-surefire</id>
+			<activation>
+				<property>
+					<name>!skip.isis-app-starter-surefire</name>
+				</property>
+			</activation>
+
+			<properties>
+				<!-- uses maven-surefire-plugin.version, which is declared by spring-boot-starter-parent -->
+				<skipTests>false</skipTests>
+				<skipUTs>${skipTests}</skipUTs>
+				<skipITs>${skipTests}</skipITs>
+				<skipBDDs>${skipTests}</skipBDDs>
+				<surefire-plugin.argLine></surefire-plugin.argLine>
+			</properties>
+
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>${maven-surefire-plugin.version}</version>
+							<executions>
+								<execution>
+									<id>default-test</id>
+									<phase>test</phase>
+									<goals>
+										<goal>test</goal>
+									</goals>
+									<configuration>
+										<skipTests>${skipUTs}</skipTests>
+										<includes>
+											<include>**/*Test*.java</include>
+										</includes>
+										<excludes>
+											<exclude>**/*Testing.java</exclude>
+											<exclude>**/*IntegTest*.java</exclude>
+											<exclude>**/*Abstract*.java</exclude>
+										</excludes>
+										<useFile>true</useFile>
+										<printSummary>true</printSummary>
+										<reportsDirectory>${project.build.directory}/surefire-unittest-reports</reportsDirectory>
+										<forkCount>1</forkCount>
+										<reuseForks>true</reuseForks>
+										<argLine>${surefire-plugin.argLine}</argLine>
+									</configuration>
+								</execution>
+								<execution>
+									<id>integ-test</id>
+									<phase>integration-test</phase>
+									<goals>
+										<goal>test</goal>
+									</goals>
+									<configuration>
+										<skipTests>${skipITs}</skipTests>
+										<includes>
+											<include>**/*IntegTest*.java</include>
+										</includes>
+										<excludes>
+											<exclude>**/*Abstract*.java</exclude>
+										</excludes>
+										<useFile>true</useFile>
+										<printSummary>true</printSummary>
+										<reportsDirectory>${project.build.directory}/surefire-integtest-reports</reportsDirectory>
+										<forkCount>1</forkCount>
+										<reuseForks>true</reuseForks>
+										<argLine>${surefire-plugin.argLine}</argLine>
+									</configuration>
+								</execution>
+								<execution>
+									<id>bdd-specs</id>
+									<phase>integration-test</phase>
+									<goals>
+										<goal>test</goal>
+									</goals>
+									<configuration>
+										<skipTests>${skipBDDs}</skipTests>
+										<includes>
+											<include>**/*Spec*.java</include>
+										</includes>
+										<excludes>
+											<exclude>**/*Test.java</exclude>
+											<exclude>**/*Testing.java</exclude>
+											<exclude>**/*IntegTest*.java</exclude>
+											<exclude>**/*Abstract*.java</exclude>
+										</excludes>
+										<useFile>true</useFile>
+										<printSummary>true</printSummary>
+										<reportsDirectory>${project.build.directory}/surefire-bddspecs-reports</reportsDirectory>
+										<forkCount>1</forkCount>
+										<reuseForks>true</reuseForks>
+										<argLine>${surefire-plugin.argLine}</argLine>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-report-plugin</artifactId>
+							<version>${maven-surefire-plugin.version}</version>
+							<configuration>
+								<showSuccess>false</showSuccess>
+							</configuration>
+							<executions>
+								<execution>
+									<id>test</id>
+									<phase>test</phase>
+								</execution>
+								<execution>
+									<id>integration-test</id>
+									<phase>integration-test</phase>
+								</execution>
+								<execution>
+									<id>bdd-specs</id>
+									<phase>integration-test</phase>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+		<profile>
+			<id>isis-app-starter-docker</id>
+			<activation>
+				<property>
+					<name>!skip.isis-app-starter-docker</name>
+				</property>
+			</activation>
+			<properties>
+				<jib-maven-plugin.version>3.2.1</jib-maven-plugin.version>
+			</properties>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>com.google.cloud.tools</groupId>
+							<artifactId>jib-maven-plugin</artifactId>
+							<version>${jib-maven-plugin.version}</version>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+		<!-- running: mvn spring-boot:run -->
+		<profile>
+			<id>isis-app-starter-boot</id>
+			<activation>
+				<property>
+					<name>!skip.isis-app-starter-boot</name>
+				</property>
+			</activation>
+			<properties>
+			</properties>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-maven-plugin</artifactId>
+							<version>${spring-boot.version}</version>
+							<executions>
+								<execution>
+									<goals>
+										<goal>repackage</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+		<profile>
+			<id>apache-release</id>
+			<activation>
+				<property>
+					<name>apache-release</name>
+				</property>
+			</activation>
+			<properties>
+				<skipTests>true</skipTests>
+				<altDeploymentRepository>apache.releases.https::default::https://repository.apache.org/service/local/staging/deploy/maven2</altDeploymentRepository>
+			</properties>
+			<build>
+				<plugins>
+					<!-- We want to sign the artifact, the POM, and all attached artifacts -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>sign-release-artifacts</id>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<gpgArguments>
+								<arg>--digest-algo=SHA512</arg>
+							</gpgArguments>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>net.nicoulaj.maven.plugins</groupId>
+						<artifactId>checksum-maven-plugin</artifactId>
+						<version>1.11</version>
+						<executions>
+							<execution>
+								<id>source-release-checksum</id>
+								<goals>
+									<goal>files</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<algorithms>
+								<algorithm>SHA-512</algorithm>
+							</algorithms>
+							<csvSummary>false</csvSummary>
+							<fileSets>
+								<fileSet>
+									<directory>${project.build.directory}</directory>
+									<includes>
+										<include>${project.artifactId}-${project.version}-source-release.zip</include>
+										<include>${project.artifactId}-${project.version}-source-release.tar*</include>
+									</includes>
+								</fileSet>
+							</fileSets>
+							<failIfNoFiles>false</failIfNoFiles><!-- usually, no file to do checksum:
+								don't consider error -->
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>github</id>
+			<activation>
+				<property>
+					<name>github</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>Github Releases</name>
+					<url>https://maven.pkg.github.com/apache/isis</url>
+				</repository>
+			</distributionManagement>
+		</profile>
+
+		<profile>
+			<id>nightly-localfs-repo</id>
+			<activation>
+				<property>
+					<name>nightly-localfs-repo</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>nightly-localfs-repo</id>
+					<name>Temporary Local Filesystem Staging Repository</name>
+					<url>file://${MVN_SNAPSHOTS_PATH}</url>
+				</repository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-deploy-plugin</artifactId>
+						<version>2.8.2</version>
+						<configuration>
+							<altDeploymentRepository>
+								nightly-localfs-repo::default::file://${MVN_SNAPSHOTS_PATH}
+							</altDeploymentRepository>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 
 	</profiles>
