ISIS-3002: JDO command log integ tests almost there

--- a/extensions/core/commandlog/persistence-jdo/src/test/resources/application-test.yml
+++ b/extensions/core/commandlog/persistence-jdo/src/test/resources/application-test.yml
@@ -17,13 +17,10 @@
 isis:
   persistence:
     schema:
-      auto-create-schemas: "ISISEXTCOMMANDLOG"
+      auto-create-schemas: "ISISEXTSESSIONLOG"
 
-  extensions:
-    session-log:
-      auto-logout-on-restart: false
 
-spring:
-  jpa:
-    show-sql: true
-
+datanucleus:
+  schema:
+    generate-database:
+      mode: "create"
