ISIS-3002: adds check to no longer throw exception if layout references a collection that doesn't exist

--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -107,7 +107,7 @@ isis:
 # schema auto creation etc. ...
   persistence:
     schema:
-       autoCreateSchemas: isisExtensionsSecman,isisExtensionsCommandLog,demo
+       autoCreateSchemas: isisExtensionsSecman,isisExtCommandLog,isisExtExecutionLog,demo
 
   extensions:
     secman:
