--- a/extensions/core/executionlog/persistence-jpa/pom.xml
+++ b/extensions/core/executionlog/persistence-jpa/pom.xml
@@ -62,6 +62,13 @@
 
         <!-- TESTING -->
 
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-executionlog-applib</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+
 		<dependency>
 			<groupId>org.apache.isis.testing</groupId>
 			<artifactId>isis-testing-unittestsupport-applib</artifactId>
