ISIS-3002: fixes integ tests for exec log jdo

--- a/extensions/core/executionlog/persistence-jdo/src/test/resources/application-test.yml
+++ b/extensions/core/executionlog/persistence-jdo/src/test/resources/application-test.yml
@@ -17,7 +17,7 @@
 isis:
   persistence:
     schema:
-      auto-create-schemas: "ISISEXTCOMMANDLOG"
+      auto-create-schemas: "ISISEXTEXECUTIONLOG"
 
 
 datanucleus:
