ISIS-3002: sketching in outbox applib, jdo impl
also:
- adds executionrepublisher module
- simplifies ixn v2, also introduces interactionDtos as data structure
- simplifies cmd v2 (only logicalMemberIdentifier)

--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -124,6 +124,9 @@ content:
       start_path: extensions/core/executionoutbox/adoc # extensions
       branches: HEAD
     - url: .
+      start_path: extensions/core/executionreplay/adoc # extensions
+      branches: HEAD
+    - url: .
       start_path: extensions/core/flyway/adoc # userguide
       branches: HEAD
     - url: .
