--- a/extensions/core/executionoutbox/pom.xml
+++ b/extensions/core/executionoutbox/pom.xml
@@ -36,6 +36,13 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-executionoutbox-applib</artifactId>
+				<type>test-jar</type>
+				<scope>test</scope>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-executionoutbox-dto</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
@@ -65,10 +72,8 @@
 	<modules>
 		<module>applib</module>
 		<module>dto</module>
-<!--
 		<module>persistence-jdo</module>
 		<module>persistence-jpa</module>
--->
 		<module>restapi</module>
 		<module>restclient</module>
 	</modules>
