--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -191,6 +191,18 @@
 
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-executionrepublisher</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-executionoutrepublisher-applib</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-excel</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
@@ -440,6 +452,7 @@
 		<module>core/commandreplay</module>
 		<module>core/executionlog</module>
 		<module>core/executionoutbox</module>
+		<module>core/executionrepublisher</module>
 		<module>core/flyway</module>
 		<module>core/quartz</module>
 
