ISIS-3002: adds outbox client, bootstraps (wip)

--- a/extensions/core/executionoutbox/pom.xml
+++ b/extensions/core/executionoutbox/pom.xml
@@ -48,7 +48,21 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-executionoutbox-persistence-jdo</artifactId>
+				<type>test-jar</type>
+				<scope>test</scope>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-executionoutbox-persistence-jpa</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-executionoutbox-persistence-jpa</artifactId>
+				<type>test-jar</type>
+				<scope>test</scope>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
