--- a/core/pom.xml
+++ b/core/pom.xml
@@ -461,11 +461,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.core</groupId>
-				<artifactId>isis-core-internaltestsupport</artifactId>
-				<version>2.0.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.isis.core</groupId>
 				<artifactId>isis-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>jar</type>
@@ -488,6 +483,11 @@
 			<dependency>
 				<groupId>org.apache.isis.core</groupId>
 				<artifactId>isis-core-interaction</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.core</groupId>
+				<artifactId>isis-core-internaltestsupport</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
@@ -688,6 +688,7 @@
 				<artifactId>isis-testing</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
+				<scope>test</scope>
 			</dependency>
 
 			<!-- THIRD PARTY DEPENDENCIES -->
@@ -983,7 +984,7 @@
 				<artifactId>shiro-web</artifactId>
 				<version>${shiro.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
