--- a/incubator/extensions/core/commandreplay/adoc/antora.yml
+++ b/incubator/extensions/core/commandreplay/adoc/antora.yml
@@ -15,5 +15,5 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-name: userguide
+name: incubator
 version: latest
