--- a/incubator/extensions/core/commandreplay/pom.xml
+++ b/incubator/extensions/core/commandreplay/pom.xml
@@ -15,10 +15,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.extensions</groupId>
-		<artifactId>isis-extensions</artifactId>
+		<groupId>org.apache.isis.incubator.extensions</groupId>
+		<artifactId>isis-incubator</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>isis-extensions-commandreplay</artifactId>
@@ -31,12 +31,12 @@
 		<dependencies>
 
 			<dependency>
-				<groupId>org.apache.isis.extensions</groupId>
+				<groupId>org.apache.isis.incubator.extensions</groupId>
 				<artifactId>isis-extensions-commandreplay-primary</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.isis.extensions</groupId>
+				<groupId>org.apache.isis.incubator.extensions</groupId>
 				<artifactId>isis-extensions-commandreplay-secondary</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
