--- a/incubator/extensions/core/commandreplay/primary/pom.xml
+++ b/incubator/extensions/core/commandreplay/primary/pom.xml
@@ -14,7 +14,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.isis.extensions</groupId>
+        <groupId>org.apache.isis.incubator.extensions</groupId>
         <artifactId>isis-extensions-commandreplay</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
@@ -29,8 +29,8 @@
     </description>
 
     <properties>
-        <jar-plugin.automaticModuleName>org.apache.isis.extensions.commandreplay.primary</jar-plugin.automaticModuleName>
-        <git-plugin.propertiesDir>org/apache/isis/extensions/commandreplay/primary</git-plugin.propertiesDir>
+        <jar-plugin.automaticModuleName>org.apache.isis.incubator.extensions.commandreplay.primary</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/isis/incubator/extensions/core/commandreplay/primary</git-plugin.propertiesDir>
     </properties>
 
     <dependencies>
