--- a/incubator/extensions/core/commandreplay/secondary/pom.xml
+++ b/incubator/extensions/core/commandreplay/secondary/pom.xml
@@ -15,7 +15,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.extensions</groupId>
+		<groupId>org.apache.isis.incubator.extensions</groupId>
 		<artifactId>isis-extensions-commandreplay</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
@@ -31,8 +31,8 @@
     </description>
 
 	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.extensions.commandreplay.secondary</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/extensions/commandreplay/secondary</git-plugin.propertiesDir>
+		<jar-plugin.automaticModuleName>org.apache.isis.incubator.extensions.commandreplay.secondary</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/isis/incubator/extensions/core/commandreplay/secondary</git-plugin.propertiesDir>
 		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
