--- a/extensions/core/executionoutbox/restclient/pom.xml
+++ b/extensions/core/executionoutbox/restclient/pom.xml
@@ -198,8 +198,29 @@
                 <artifactId>log4j-api</artifactId>
                 <version>${log4j2.version}</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
+
+    <profiles>
+        <profile>
+            <id>dependency-convergence-fix</id>
+            <activation>
+                <property>
+                    <name>!skip.dependency-convergence-fix</name>
+                </property>
+            </activation>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.fasterxml.woodstox</groupId>
+                        <artifactId>woodstox-core</artifactId>
+                        <version>6.2.8</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+        </profile>
+    </profiles>
 
 
 </project>
