--- a/extensions/core/executionoutbox/restclient/pom.xml
+++ b/extensions/core/executionoutbox/restclient/pom.xml
@@ -224,6 +224,11 @@
                         <artifactId>cglib-nodep</artifactId>
                         <version>3.3.0</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.core</artifactId>
+                        <version>6.0.0</version>
+                    </dependency>
                 </dependencies>
             </dependencyManagement>
         </profile>
