--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -434,6 +434,7 @@ under the License.
 		<shiro.version>1.9.1</shiro.version>
 		<simpleslackapi.version>1.3.0</simpleslackapi.version>
 		<slf4j-api.version>1.7.36</slf4j-api.version> <!-- also provided by spring-boot-starter-logging, needed to solve convergence issues -->
+		<spring-boot.version>2.7.2</spring-boot.version>
 		<summernote.version>0.8.11</summernote.version>
 		<swagger-core.version>1.6.6</swagger-core.version>
 
