--- a/incubator/extensions/core/commandreplay/pom.xml
+++ b/incubator/extensions/core/commandreplay/pom.xml
@@ -15,12 +15,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.incubator.extensions</groupId>
+		<groupId>org.apache.isis.incubator</groupId>
 		<artifactId>isis-incubator</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 
+	<groupId>org.apache.isis.incubator.extensions</groupId>
 	<artifactId>isis-extensions-commandreplay</artifactId>
 	<name>Apache Isis Ext - Command Replay</name>
 	<description>Replays commands to secondary system</description>
