ISIS-3091: completes jpa prod for audit trail, wip

--- a/extensions/security/audittrail/persistence-jdo/src/test/resources/application-test.yml
+++ b/extensions/security/audittrail/persistence-jdo/src/test/resources/application-test.yml
@@ -17,7 +17,7 @@
 isis:
   persistence:
     schema:
-      auto-create-schemas: "ISISEXTSESSIONLOG"
+      auto-create-schemas: "ISISEXTAUDITTRAIL"
 
 
 datanucleus:
