ISIS-3091: more compile fixes

--- a/extensions/core/commandlog/persistence-jpa/pom.xml
+++ b/extensions/core/commandlog/persistence-jpa/pom.xml
@@ -81,11 +81,16 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.isis.testing</groupId>
-			<artifactId>isis-testing-fixtures-applib</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.isis.testing</groupId>
+            <artifactId>isis-testing-fixtures-applib</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.isis.persistence</groupId>
+                    <artifactId>isis-persistence-jdo-applib</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
     </dependencies>
 
