ISIS-3091: renames audittrail and sessionlog under 'extensions' subpackage; fleshes out integ tests

--- a/extensions/security/audittrail/persistence-jdo/pom.xml
+++ b/extensions/security/audittrail/persistence-jdo/pom.xml
@@ -58,6 +58,8 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- testing -->
+
         <dependency>
             <groupId>org.apache.isis.extensions</groupId>
             <artifactId>isis-extensions-audittrail-applib</artifactId>
