--- a/regressiontests/pom.xml
+++ b/regressiontests/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
-	license agreements. See the NOTICE file distributed with this work for additional 
-	information regarding copyright ownership. The ASF licenses this file to 
-	you under the Apache License, Version 2.0 (the "License"); you may not use 
-	this file except in compliance with the License. You may obtain a copy of 
-	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-	by applicable law or agreed to in writing, software distributed under the 
-	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-	OF ANY KIND, either express or implied. See the License for the specific 
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor
+	license agreements. See the NOTICE file distributed with this work for additional
+	information regarding copyright ownership. The ASF licenses this file to
+	you under the Apache License, Version 2.0 (the "License"); you may not use
+	this file except in compliance with the License. You may obtain a copy of
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
+	by applicable law or agreed to in writing, software distributed under the
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
+	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -168,7 +168,7 @@
 
 	<dependencyManagement>
 		<dependencies>
-		
+
 			<dependency>
 				<groupId>org.apache.isis.regressiontests</groupId>
 				<artifactId>isis-regressiontests-stable</artifactId>
@@ -204,51 +204,49 @@
 				<artifactId>isis-testing-fixtures-applib</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.isis.viewer</groupId>
 				<artifactId>isis-viewer-restfulobjects-client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-secman-integration</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-secman-encryption-jbcrypt</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-secman-persistence-jdo</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<!--TODO <dependency> -->
-			<!-- <groupId>org.apache.isis.extensions</groupId> -->
-			<!-- <artifactId>isis-extensions-secman-persistence-jpa</artifactId> -->
-			<!-- </dependency> -->
+
+			<dependency>
+				 <groupId>org.apache.isis.extensions</groupId>
+				 <artifactId>isis-extensions-secman-persistence-jpa</artifactId>
+			 </dependency>
+
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-secman-shiro-realm</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-shiro-realm-ldap-impl</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
-			<dependency>
-				<groupId>org.apache.isis.testing</groupId>
-				<artifactId>isis-testing-integtestsupport-applib</artifactId>
-			</dependency>
-			
+
+
 
 			<!-- TEST DEPENDENCIES -->
 
@@ -301,6 +299,7 @@
 		<module>stable-interact</module>
 		<module>stable-persistence-jdo</module>
 		<module>stable-persistence-jpa</module>
+		<module>stable-cmdexecauditsess</module>
 		<!-- <module>stable-publishing-jdo</module> code is still incubating -->
 		<module>stable-publishing-jpa</module>
 		<module>stable-rest</module>
