ISIS-3091: fixes (?) mvn deps

--- a/regressiontests/stable-cmdexecauditsess/persistence-jpa/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jpa/pom.xml
@@ -27,7 +27,8 @@
         <dependency>
             <groupId>org.apache.isis.regressiontests</groupId>
             <artifactId>isis-regressiontests-cmdexecauditsess-generic</artifactId>
-            <type>test-jar</type>
+            <scope>test</scope>
+
         </dependency>
 
         <dependency>
