--- a/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.apache.isis.regressiontests</groupId>
             <artifactId>isis-regressiontests-cmdexecauditsess-generic</artifactId>
-            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
