ISIS-3091: post merge: pom name fixes
- also improves tooling error message

--- a/extensions/security/audittrail/persistence-jdo/pom.xml
+++ b/extensions/security/audittrail/persistence-jdo/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>isis-extensions-audittrail-persistence-jdo</artifactId>
-    <name>Apache Isis Ext - Session Log Persistence (using JDO)</name>
+    <name>Apache Isis Ext - Audit Trail Persistence (using JDO)</name>
 
     <properties>
         <jar-plugin.automaticModuleName>org.apache.isis.extensions.audittrail.persistence.jdo</jar-plugin.automaticModuleName>
