ISIS-3097: remove aritfact 'isis-valuetypes-prism-wicket'
- instead moves the (single) utility class to wicket-ui

--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -73,6 +73,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-prism-resources</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+		
+		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-devutils</artifactId>
 			<exclusions>
