ISIS-3097: remove aritfact 'isis-valuetypes-prism-vaadin'
- instead moves the (single) utility class to vaadin-ui

--- a/incubator/viewers/vaadin/ui/pom.xml
+++ b/incubator/viewers/vaadin/ui/pom.xml
@@ -121,6 +121,12 @@
 			<groupId>org.apache.isis.core</groupId>
 			<artifactId>isis-core-runtimeservices</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-prism-resources</artifactId>
+            <version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.vaadin</groupId>
