--- a/regressiontests/pom.xml
+++ b/regressiontests/pom.xml
@@ -183,7 +183,7 @@
 
 			<dependency>
 				<groupId>org.apache.isis.viewer</groupId>
-				<artifactId>isis-viewer-common</artifactId>
+				<artifactId>isis-viewer-commons-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
