--- a/viewers/commons/model/pom.xml
+++ b/viewers/commons/model/pom.xml
@@ -22,19 +22,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.isis.core</groupId>
-        <artifactId>isis-core</artifactId>
+    	<groupId>org.apache.isis.viewer</groupId>
+    	<artifactId>isis-viewer-commons</artifactId>
         <version>2.0.0-SNAPSHOT</version>
-        <relativePath>../../core/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.apache.isis.viewer</groupId>
-    <artifactId>isis-viewer-common</artifactId>
-    <name>Apache Isis Viewer - Common Model</name>
+    <artifactId>isis-viewer-commons-model</artifactId>
+    <name>Apache Isis Viewer - Commons Model</name>
 
     <properties>
-        <jar-plugin.automaticModuleName>org.apache.isis.viewer.common</jar-plugin.automaticModuleName>
-        <git-plugin.propertiesDir>org/apache/isis/viewer/common</git-plugin.propertiesDir>
+        <jar-plugin.automaticModuleName>org.apache.isis.viewer.commons.model</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/isis/viewer/commons/model</git-plugin.propertiesDir>
     </properties>
 
     <dependencies>
@@ -59,6 +57,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
