ISIS-3100: moves SSE from 'valuetypes' to 'extensions'
- not renaming packages yet

--- a/examples/demo/wicket/common/pom.xml
+++ b/examples/demo/wicket/common/pom.xml
@@ -88,8 +88,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.valuetypes</groupId>
-			<artifactId>isis-valuetypes-sse-ui-wkt</artifactId>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-sse-wicket</artifactId>
 		</dependency>
 
 		<!-- EXTENSIONS -->
