--- a/examples/demo/domain/pom.xml
+++ b/examples/demo/domain/pom.xml
@@ -82,8 +82,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.valuetypes</groupId>
-			<artifactId>isis-valuetypes-sse-applib</artifactId>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-sse-applib</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.isis.valuetypes</groupId>
