--- a/examples/demo/vaadin/pom.xml
+++ b/examples/demo/vaadin/pom.xml
@@ -72,8 +72,8 @@
 			<artifactId>isis-valuetypes-markdown-ui-wkt</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.isis.valuetypes</groupId>
-			<artifactId>isis-valuetypes-sse-ui-wkt</artifactId>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-sse-wicket</artifactId>
 		</dependency>
 
 		<!-- OTHER DEPENDENCIES -->
