--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -432,6 +432,27 @@
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-sse</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-sse-applib</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-sse-metamodel</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-sse-wicket</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.apache.isis.testing</groupId>
@@ -473,6 +494,8 @@
 		<module>security/shiro-realm-ldap</module>
 		<module>security/spring-oauth2</module>
 		<module>security/sessionlog</module>
+
+		<module>sse</module>
 
 		<module>vro/cors</module>
 
