--- a/extensions/sse/applib/pom.xml
+++ b/extensions/sse/applib/pom.xml
@@ -15,23 +15,39 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.valuetypes</groupId>
-		<artifactId>isis-valuetypes</artifactId>
+		<groupId>org.apache.isis.extensions</groupId>
+		<artifactId>isis-extensions-sse</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>isis-valuetypes-sse</artifactId>
-	<name>Apache Isis Val - Server Sent Events (parent)</name>
-	<description>
-		Dynamically updating HTML markup
-	</description>
+	<artifactId>isis-extensions-sse-applib</artifactId>
+	<name>Apache Isis Ext - Server Sent Events</name>
+	<description></description>
 
-	<packaging>pom</packaging>
+	<properties>
+		<jar-plugin.automaticModuleName>org.apache.isis.extensions.sse.applib</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/isis/extensions/sse/applib</git-plugin.propertiesDir>
+	</properties>
 
-	<modules>
-		<module>applib</module>
-		<module>metamodel</module>
-		<module>ui</module>
-	</modules>
+	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.isis.core</groupId>
+			<artifactId>isis-core-metamodel</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.isis.core</groupId>
+			<artifactId>isis-core-webapp</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.isis.viewer</groupId>
+			<artifactId>isis-viewer-wicket-ui</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+	</dependencies>
 
 </project>
