--- a/extensions/sse/pom.xml
+++ b/extensions/sse/pom.xml
@@ -15,36 +15,21 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.valuetypes</groupId>
-		<artifactId>isis-valuetypes-sse</artifactId>
+		<groupId>org.apache.isis.extensions</groupId>
+		<artifactId>isis-extensions</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>isis-valuetypes-sse-ui</artifactId>
-	<name>Apache Isis Val - SSE (ui)</name>
+	<artifactId>isis-extensions-sse</artifactId>
+	<name>Apache Isis Ext - Server Sent Events (parent)</name>
+	<description>Dynamically updating HTML markup</description>
+
 	<packaging>pom</packaging>
 
-	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.valuetypes.sse.ui</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/valuetypes/sse/ui</git-plugin.propertiesDir>
-	</properties>
-
-	<dependencies>
-	
-		<dependency>
-			<groupId>org.apache.isis.valuetypes</groupId>
-			<artifactId>isis-valuetypes-sse-applib</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.isis.core</groupId>
-			<artifactId>isis-core-metamodel</artifactId>
-		</dependency>
-
-
-	</dependencies>
-
 	<modules>
+		<module>applib</module>
+		<module>metamodel</module>
 		<module>wicket</module>
 	</modules>
+
 </project>
