--- a/extensions/sse/wicket/pom.xml
+++ b/extensions/sse/wicket/pom.xml
@@ -15,17 +15,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.valuetypes</groupId>
-		<artifactId>isis-valuetypes-sse-ui</artifactId>
+		<groupId>org.apache.isis.extensions</groupId>
+		<artifactId>isis-extensions-sse</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>isis-valuetypes-sse-ui-wkt</artifactId>
-	<name>Apache Isis Val - Server Sent Events (ui wicket)</name>
+	<artifactId>isis-extensions-sse-wicket</artifactId>
+	<name>Apache Isis Ext - Server Sent Events (Wicket)</name>
 
 	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.valuetypes.sse.ui.wkt</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/valuetypes/sse/ui/wkt</git-plugin.propertiesDir>
+		<jar-plugin.automaticModuleName>org.apache.isis.extensions.sse.wicket</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/isis/extensions/sse/wicket</git-plugin.propertiesDir>
 	</properties>
 
 	<build>
@@ -48,16 +48,16 @@
 	<dependencies>
 	
 		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-sse-metamodel</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.isis.viewer</groupId>
 			<artifactId>isis-viewer-wicket-ui</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.apache.isis.valuetypes</groupId>
-			<artifactId>isis-valuetypes-sse-metamodel</artifactId>
-		</dependency>
-
 	</dependencies>
 
 </project>
