ISIS-3100: fixes antora config for SSE

--- a/antora/playbooks/site-extensions.yml
+++ b/antora/playbooks/site-extensions.yml
@@ -90,6 +90,10 @@ content:
     - url: .
       start_path: extensions/vw/pdfjs/adoc # vw
       branches: HEAD
+    - url: .
+      start_path: extensions/sse/adoc # extensions
+      branches: HEAD
+      
 
 # mavendeps
     - url: .
