--- a/extensions/sse/adoc/antora.yml
+++ b/extensions/sse/adoc/antora.yml
@@ -15,5 +15,5 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-name: valuetypes
+name: extensions
 version: latest
