ISIS-3100: moves sse to extensions/vw/sse
since it is wicket specific; keeps same pattern as other viewers.  (If in the future any of these extensions support additional viewers, then we'll need to reorganise extensions to reflect this ... but for now, this is the pattern)

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -495,11 +495,11 @@
 		<module>security/spring-oauth2</module>
 		<module>security/sessionlog</module>
 
-		<module>sse</module>
 
 		<module>vro/cors</module>
 
 		<module>vw/exceldownload</module>
+		<module>vw/sse</module>
 		<module>vw/fullcalendar</module>
 		<module>vw/pdfjs</module>
 
