--- a/antora/playbooks/site-extensions.yml
+++ b/antora/playbooks/site-extensions.yml
@@ -91,9 +91,9 @@ content:
       start_path: extensions/vw/pdfjs/adoc # vw
       branches: HEAD
     - url: .
-      start_path: extensions/sse/adoc # extensions
+      start_path: extensions/vw/sse/adoc # extensions
       branches: HEAD
-      
+
 
 # mavendeps
     - url: .
