--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -161,9 +161,9 @@ content:
     - url: .
       start_path: extensions/vw/pdfjs/adoc # vw
       branches: HEAD
-      
+
     - url: .
-      start_path: extensions/sse/adoc # extensions
+      start_path: extensions/vw/sse/adoc # extensions
       branches: HEAD
 
 # incubator
