--- a/core/pom.xml
+++ b/core/pom.xml
@@ -629,6 +629,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.viewer</groupId>
+				<artifactId>isis-viewer-wicket-applib</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.viewer</groupId>
 				<artifactId>isis-viewer-wicket-model</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
