--- a/examples/demo/wicket/common/pom.xml
+++ b/examples/demo/wicket/common/pom.xml
@@ -72,6 +72,10 @@
 
 		<dependency>
 			<groupId>org.apache.isis.viewer</groupId>
+			<artifactId>isis-viewer-wicket-applib</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.viewer</groupId>
 			<artifactId>isis-viewer-wicket-viewer</artifactId>
 		</dependency>
 
