--- a/viewers/wicket/applib/pom.xml
+++ b/viewers/wicket/applib/pom.xml
@@ -22,23 +22,35 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.isis.core</groupId>
-        <artifactId>isis-core</artifactId>
+        <groupId>org.apache.isis.viewer</groupId>
+        <artifactId>isis-viewer-wicket</artifactId>
         <version>2.0.0-SNAPSHOT</version>
-        <relativePath>../../core/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.apache.isis.viewer</groupId>
-    <artifactId>isis-viewer-wicket</artifactId>
-    <name>Apache Isis Viewer - Wicket</name>
+    <artifactId>isis-viewer-wicket-applib</artifactId>
+    <name>Apache Isis Viewer - Wicket (Applib)</name>
 
-    <packaging>pom</packaging>
+    <properties>
+        <jar-plugin.automaticModuleName>org.apache.isis.viewer.wicket.applib</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/isis/viewer/wicket/applib</git-plugin.propertiesDir>
+    </properties>
 
-    <modules>
-        <module>applib</module>
-        <module>model</module>
-        <module>viewer</module>
-        <module>ui</module>
-    </modules>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-applib</artifactId>
+        </dependency>
+
+		<!-- TESTING -->
+
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-internaltestsupport</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
