ISIS-3029: test fixes

--- a/extensions/security/secman/persistence-jdo/src/test/resources/application-test.yml
+++ b/extensions/security/secman/persistence-jdo/src/test/resources/application-test.yml
@@ -32,7 +32,7 @@ isis:
 
   persistence:
     schema:
-      auto-create-schemas: "ISISEXTENSIONSSECMAN"
+      auto-create-schemas: "ISISEXTSECMAN"
 
 
 spring:
