ISIS-3108: removes special case processing, we now always install the facet

--- a/regressiontests/stable-cmdexecauditsess/persistence-jpa/src/test/resources/application-test.yml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jpa/src/test/resources/application-test.yml
@@ -27,6 +27,11 @@ isis:
   extensions:
     session-log:
       auto-logout-on-restart: false
+  core:
+    meta-model:
+      introspector:
+        mode: full
+
 
 spring:
   jpa:
