--- a/extensions/security/secman/persistence-jpa/src/main/resources/META-INF/orm-secman.template
+++ b/extensions/security/secman/persistence-jpa/src/main/resources/META-INF/orm-secman.template
@@ -26,22 +26,22 @@
 	<!-- rename file to .xml then customize-->
 
 	<entity class="org.apache.isis.extensions.secman.jpa.permission.dom.ApplicationPermission">
-		<table schema="isisExtensionsSecman" name="ApplicationPermission"/>
+		<table schema="isisExtSecman" name="ApplicationPermission"/>
 	</entity>
 	
 	<entity class="org.apache.isis.extensions.secman.jpa.role.dom.ApplicationRole">
-		<table schema="isisExtensionsSecman" name="ApplicationRole"/>
+		<table schema="isisExtSecman" name="ApplicationRole"/>
 	</entity>
 	
 	<entity class="org.apache.isis.extensions.secman.jpa.tenancy.dom.ApplicationTenancy">
-		<table schema="isisExtensionsSecman" name="ApplicationTenancy"/>
+		<table schema="isisExtSecman" name="ApplicationTenancy"/>
 	</entity>
 	
 	<entity class="org.apache.isis.extensions.secman.jpa.user.dom.ApplicationUser">
-		<table schema="isisExtensionsSecman" name="ApplicationUser"/>
+		<table schema="isisExtSecman" name="ApplicationUser"/>
 		<attributes>
 			<many-to-many name="roles">
-				<join-table schema="isisExtensionsSecman" name="ApplicationUserRoles">
+				<join-table schema="isisExtSecman" name="ApplicationUserRoles">
 					<join-column name="userId" />
 					<inverse-join-column name="roleId" />
 				</join-table>
