--- a/examples/demo/domain/pom.xml
+++ b/examples/demo/domain/pom.xml
@@ -18,7 +18,6 @@
 		<groupId>org.apache.isis.examples.apps</groupId>
 		<artifactId>demo-parent</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>demo-domain</artifactId>
@@ -104,6 +103,18 @@
 			<groupId>org.apache.isis.extensions</groupId>
 			<artifactId>isis-extensions-sessionlog-persistence-jdo</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-executionlog-persistence-jdo</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-executionoutbox-persistence-jdo</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-audittrail-persistence-jdo</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.isis.valuetypes</groupId>
@@ -127,6 +138,18 @@
 		<dependency>
 			<groupId>org.apache.isis.extensions</groupId>
 			<artifactId>isis-extensions-sessionlog-persistence-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-executionlog-persistence-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-executionoutbox-persistence-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.extensions</groupId>
+			<artifactId>isis-extensions-audittrail-persistence-jpa</artifactId>
 		</dependency>
 
 		<dependency>
