ISIS-3120: minor: adds MM exporter stub

--- a/examples/demo/domain-tests/pom.xml
+++ b/examples/demo/domain-tests/pom.xml
@@ -25,6 +25,7 @@
 	<description>Introduced to allow for JUnit integration tests with the demo-domain.</description>
 
 	<properties>
+		<!-- <maven.compiler.release>18</maven.compiler.release> -->
 	</properties>
 
     <build>
