ISIS-2965: further small doc improvements

--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -108,20 +108,21 @@ content:
       start_path: extensions/adoc # extensions
       branches: HEAD
 
+
     - url: .
-      start_path: extensions/applib/excel/adoc # extensions
+      start_path: extensions/core/commandlog/adoc # userguide
       branches: HEAD
     - url: .
-      start_path: extensions/core/commandlog/adoc # extensions
+      start_path: extensions/core/excel/adoc # userguide
       branches: HEAD
     - url: .
-      start_path: extensions/core/executionlog/adoc # extensions
+      start_path: extensions/core/executionlog/adoc # userguide
       branches: HEAD
     - url: .
-      start_path: extensions/core/executionoutbox/adoc # extensions
+      start_path: extensions/core/executionoutbox/adoc # userguide
       branches: HEAD
     - url: .
-      start_path: extensions/core/executionrepublisher/adoc # extensions
+      start_path: extensions/core/executionrepublisher/adoc # userguide
       branches: HEAD
     - url: .
       start_path: extensions/core/flyway/adoc # userguide
@@ -149,6 +150,7 @@ content:
     - url: .
       start_path: extensions/vro/cors/adoc # vro
       branches: HEAD
+
     - url: .
       start_path: extensions/vw/exceldownload/adoc # vw
       branches: HEAD
@@ -161,9 +163,8 @@ content:
     - url: .
       start_path: extensions/vw/pdfjs/adoc # vw
       branches: HEAD
-
     - url: .
-      start_path: extensions/vw/sse/adoc # extensions
+      start_path: extensions/vw/sse/adoc # vw
       branches: HEAD
 
 # incubator
