--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -431,7 +431,7 @@
 				<artifactId>isis-extensions-cors-impl</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-spring-security-oauth2</artifactId>
@@ -485,9 +485,9 @@
 	</dependencies>
 
 	<modules>
-		<module>applib/excel</module>
 
 		<module>core/commandlog</module>
+		<module>core/excel</module>
 		<module>core/executionlog</module>
 		<module>core/executionoutbox</module>
 		<module>core/executionrepublisher</module>
@@ -500,7 +500,6 @@
 		<module>security/shiro-realm-ldap</module>
 		<module>security/spring-oauth2</module>
 		<module>security/sessionlog</module>
-
 
 		<module>vro/cors</module>
 
